tags and following combination removed