@@ -1,6 +1,8 @@
 package com.harshit.service;
 
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.core.env.Environment;
 import org.springframework.data.domain.PageRequest;
@@ -30,377 +32,363 @@ import java.util.stream.Collectors;
 @Service
 @Transactional
 @RequiredArgsConstructor
+@Slf4j
 public class PostServiceImpl implements PostService {
-    private final PostRepository postRepository;
-    private final UserService userService;
-    private final CommentService commentService;
-    private final TagService tagService;
-    private final NotificationService notificationService;
-    private final Environment environment;
-    private final FileNamingUtil fileNamingUtil;
-    private final FileUploadUtil fileUploadUtil;
+	private final PostRepository postRepository;
+	private final UserService userService;
+	private final CommentService commentService;
+	private final TagService tagService;
+	private final NotificationService notificationService;
+	private final Environment environment;
+	private final FileNamingUtil fileNamingUtil;
+	private final FileUploadUtil fileUploadUtil;
 
-    @Override
-    public Post getPostById(Long postId) {
-        return postRepository.findById(postId).orElseThrow(PostNotFoundException::new);
-    }
+	@Override
+	public Post getPostById(Long postId) {
+		return postRepository.findById(postId).orElseThrow(PostNotFoundException::new);
+	}
 
-    @Override
-    public PostResponse getPostResponseById(Long postId) {
-        User authUser = userService.getAuthenticatedUser();
-        Post foundPost = getPostById(postId);
-        return PostResponse.builder()
-                .post(foundPost)
-                .likedByAuthUser(foundPost.getLikeList().contains(authUser))
-                .build();
-    }
+	@Override
+	public PostResponse getPostResponseById(Long postId) {
+		User authUser = userService.getAuthenticatedUser();
+		Post foundPost = getPostById(postId);
+		return PostResponse.builder().post(foundPost).likedByAuthUser(foundPost.getLikeList().contains(authUser))
+				.build();
+	}
 
-    @Override
-    public List<PostResponse> getTimelinePostsPaginate(Integer page, Integer size) {
-        User authUser = userService.getAuthenticatedUser();
-        List<User> followingList = authUser.getFollowingUsers();
-        followingList.add(authUser);
-        List<Long> followingListIds = followingList.stream().map(User::getId).toList();
-        return postRepository.findPostsByAuthorIdIn(
-                followingListIds,
-                PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "dateCreated")))
-                .stream().map(this::postToPostResponse).collect(Collectors.toList());
-    }
+	@Override
+	public List<PostResponse> getTimelinePostsPaginate(Integer page, Integer size, Boolean allPost) {
+		User authUser = userService.getAuthenticatedUser();
+		List<User> followingList = authUser.getFollowingUsers();
+		if (!allPost) {
 
-    @Override
-    public List<PostResponse> getPostSharesPaginate(Post sharedPost, Integer page, Integer size) {
-        return postRepository.findPostsBySharedPost(
-                sharedPost,
-                PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "dateCreated")))
-                .stream().map(this::postToPostResponse).collect(Collectors.toList());
-    }
+			followingList.add(authUser);
+			List<Long> followingListIds = followingList.stream().map(User::getId).toList();
+			return postRepository
+					.findPostsByAuthorIdIn(followingListIds,
+							PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "dateCreated")))
+					.stream().map(this::postToPostResponse).collect(Collectors.toList());
+		} else {
+			return postRepository.findAll(PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "dateCreated")))
+					.stream().map(this::postToPostResponse).collect(Collectors.toList());
+		}
+	}
 
-    @Override
-    public List<PostResponse> getPostByTagPaginate(Tag tag, Integer page, Integer size) {
-        return postRepository.findPostsByPostTags(
-                tag,
-                PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "dateCreated")))
-                .stream().map(this::postToPostResponse).collect(Collectors.toList());
-    }
+	@Override
+	public List<PostResponse> getPostSharesPaginate(Post sharedPost, Integer page, Integer size) {
+		return postRepository
+				.findPostsBySharedPost(sharedPost,
+						PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "dateCreated")))
+				.stream().map(this::postToPostResponse).collect(Collectors.toList());
+	}
 
-    @Override
-    public List<PostResponse> getPostsByUserPaginate(User author, Integer page, Integer size) {
-        return postRepository.findPostsByAuthor(
-                author,
-                PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "dateCreated")))
-                .stream().map(this::postToPostResponse).collect(Collectors.toList());
-    }
+	@Override
+	public List<PostResponse> getPostByTagPaginate(Tag tag, Integer page, Integer size,Boolean allPost) {
+		return postRepository
+				.findPostsByPostTags(tag, PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "dateCreated")))
+				.stream().map(this::postToPostResponse).collect(Collectors.toList());
+	}
 
-    @Override
-    public Post createNewPost(String content, MultipartFile postPhoto, List<TagDto> postTags) {
-        User authUser = userService.getAuthenticatedUser();
-        Post newPost = new Post();
-        newPost.setContent(content);
-        newPost.setAuthor(authUser);
-        newPost.setLikeCount(0);
-        newPost.setShareCount(0);
-        newPost.setCommentCount(0);
-        newPost.setIsTypeShare(false);
-        newPost.setSharedPost(null);
-        newPost.setDateCreated(new Date());
-        newPost.setDateLastModified(new Date());
+	@Override
+	public List<PostResponse> getPostsByUserPaginate(User author, Integer page, Integer size) {
+		return postRepository
+				.findPostsByAuthor(author, PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "dateCreated")))
+				.stream().map(this::postToPostResponse).collect(Collectors.toList());
+	}
 
-        if (postPhoto != null && postPhoto.getSize() > 0) {
-            String uploadDir = environment.getProperty("upload.post.images");
-            String newPhotoName = fileNamingUtil.nameFile(postPhoto);
-            String newPhotoUrl = environment.getProperty("app.root.backend") + File.separator
-                    + environment.getProperty("upload.post.images") + File.separator + newPhotoName;
-            newPost.setPostPhoto(newPhotoUrl);
-            try {
-                fileUploadUtil.saveNewFile(uploadDir, newPhotoName, postPhoto);
-            } catch (IOException e) {
-                throw new RuntimeException();
-            }
-        }
+	@Override
+	public Post createNewPost(String content, MultipartFile postPhoto, List<TagDto> postTags) {
+		User authUser = userService.getAuthenticatedUser();
+		Post newPost = new Post();
+		newPost.setContent(content);
+		newPost.setAuthor(authUser);
+		newPost.setLikeCount(0);
+		newPost.setShareCount(0);
+		newPost.setCommentCount(0);
+		newPost.setIsTypeShare(false);
+		newPost.setSharedPost(null);
+		newPost.setDateCreated(new Date());
+		newPost.setDateLastModified(new Date());
 
-        if (postTags != null && postTags.size() > 0) {
-            postTags.forEach(tagDto -> {
-                Tag tagToAdd = null;
-                try {
-                    Tag existingTag = tagService.getTagByName(tagDto.getTagName());
-                    if (existingTag != null) {
-                        tagToAdd = tagService.increaseTagUseCounter(tagDto.getTagName());
-                    }
-                } catch (TagNotFoundException e) {
-                    tagToAdd = tagService.createNewTag(tagDto.getTagName());
-                }
-                newPost.getPostTags().add(tagToAdd);
-            });
-        }
+		if (postPhoto != null && postPhoto.getSize() > 0) {
+			String uploadDir = environment.getProperty("upload.post.images");
+			String newPhotoName = fileNamingUtil.nameFile(postPhoto);
+			String newPhotoUrl = environment.getProperty("app.root.backend") + File.separator
+					+ environment.getProperty("upload.post.images") + File.separator + newPhotoName;
+			newPost.setPostPhoto(newPhotoUrl);
+			try {
+				fileUploadUtil.saveNewFile(uploadDir, newPhotoName, postPhoto);
+			} catch (IOException e) {
+				throw new RuntimeException();
+			}
+		}
 
-        return postRepository.save(newPost);
-    }
+		if (postTags != null && postTags.size() > 0) {
+			postTags.forEach(tagDto -> {
+				Tag tagToAdd = null;
+				try {
+					Tag existingTag = tagService.getTagByName(tagDto.getTagName());
+					if (existingTag != null) {
+						tagToAdd = tagService.increaseTagUseCounter(tagDto.getTagName());
+					}
+				} catch (TagNotFoundException e) {
+					tagToAdd = tagService.createNewTag(tagDto.getTagName());
+				}
+				newPost.getPostTags().add(tagToAdd);
+			});
+		}
 
-    @Override
-    public Post updatePost(Long postId, String content, MultipartFile postPhoto, List<TagDto> postTags) {
-        Post targetPost = getPostById(postId);
-        if (StringUtils.isNotEmpty(content)) {
-            targetPost.setContent(content);
-        }
+		return postRepository.save(newPost);
+	}
 
-        if (postPhoto != null && postPhoto.getSize() > 0) {
-            String uploadDir = environment.getProperty("upload.post.images");
-            String oldPhotoName = getPhotoNameFromPhotoUrl(targetPost.getPostPhoto());
-            String newPhotoName = fileNamingUtil.nameFile(postPhoto);
-            String newPhotoUrl = environment.getProperty("app.root.backend") + File.separator
-                    + environment.getProperty("upload.post.images") + File.separator + newPhotoName;
-            targetPost.setPostPhoto(newPhotoUrl);
-            try {
-                if (oldPhotoName == null) {
-                    fileUploadUtil.saveNewFile(uploadDir, newPhotoName, postPhoto);
-                } else {
-                    fileUploadUtil.updateFile(uploadDir, oldPhotoName, newPhotoName, postPhoto);
-                }
-            } catch (IOException e) {
-                throw new RuntimeException();
-            }
-        }
+	@Override
+	public Post updatePost(Long postId, String content, MultipartFile postPhoto, List<TagDto> postTags) {
+		Post targetPost = getPostById(postId);
+		if (StringUtils.isNotEmpty(content)) {
+			targetPost.setContent(content);
+		}
 
-        if (postTags != null && postTags.size() > 0) {
-            postTags.forEach(tagDto -> {
-                Boolean isNewTag = false;
-                Tag targetTag;
-                try {
-                    targetTag = tagService.getTagByName(tagDto.getTagName());
-                } catch (TagNotFoundException e) {
-                    targetTag = tagService.createNewTag(tagDto.getTagName());
-                    isNewTag = true;
-                }
+		if (postPhoto != null && postPhoto.getSize() > 0) {
+			String uploadDir = environment.getProperty("upload.post.images");
+			String oldPhotoName = getPhotoNameFromPhotoUrl(targetPost.getPostPhoto());
+			String newPhotoName = fileNamingUtil.nameFile(postPhoto);
+			String newPhotoUrl = environment.getProperty("app.root.backend") + File.separator
+					+ environment.getProperty("upload.post.images") + File.separator + newPhotoName;
+			targetPost.setPostPhoto(newPhotoUrl);
+			try {
+				if (oldPhotoName == null) {
+					fileUploadUtil.saveNewFile(uploadDir, newPhotoName, postPhoto);
+				} else {
+					fileUploadUtil.updateFile(uploadDir, oldPhotoName, newPhotoName, postPhoto);
+				}
+			} catch (IOException e) {
+				throw new RuntimeException();
+			}
+		}
 
-                if (tagDto.getAction().equalsIgnoreCase("remove")) {
-                    targetPost.getPostTags().remove(targetTag);
-                    tagService.decreaseTagUseCounter(tagDto.getTagName());
-                } else if (tagDto.getAction().equalsIgnoreCase("add")) {
-                    targetPost.getPostTags().add(targetTag);
-                    if (!isNewTag) {
-                        tagService.increaseTagUseCounter(tagDto.getTagName());
-                    }
-                }
-            });
-        }
+		if (postTags != null && postTags.size() > 0) {
+			postTags.forEach(tagDto -> {
+				Boolean isNewTag = false;
+				Tag targetTag;
+				try {
+					targetTag = tagService.getTagByName(tagDto.getTagName());
+				} catch (TagNotFoundException e) {
+					targetTag = tagService.createNewTag(tagDto.getTagName());
+					isNewTag = true;
+				}
 
-        targetPost.setDateLastModified(new Date());
-        return postRepository.save(targetPost);
-    }
+				if (tagDto.getAction().equalsIgnoreCase("remove")) {
+					targetPost.getPostTags().remove(targetTag);
+					tagService.decreaseTagUseCounter(tagDto.getTagName());
+				} else if (tagDto.getAction().equalsIgnoreCase("add")) {
+					targetPost.getPostTags().add(targetTag);
+					if (!isNewTag) {
+						tagService.increaseTagUseCounter(tagDto.getTagName());
+					}
+				}
+			});
+		}
 
-    @Override
-    public void deletePost(Long postId) {
-        User authUser = userService.getAuthenticatedUser();
-        Post targetPost = getPostById(postId);
+		targetPost.setDateLastModified(new Date());
+		return postRepository.save(targetPost);
+	}
 
-        if (targetPost.getAuthor().equals(authUser)) {
-            targetPost.getShareList().forEach(sharingPost -> {
-                sharingPost.setSharedPost(null);
-                postRepository.save(sharingPost);
-            });
+	@Override
+	public void deletePost(Long postId) {
+		User authUser = userService.getAuthenticatedUser();
+		Post targetPost = getPostById(postId);
 
-            notificationService.deleteNotificationByOwningPost(targetPost);
+		if (targetPost.getAuthor().equals(authUser)) {
+			targetPost.getShareList().forEach(sharingPost -> {
+				sharingPost.setSharedPost(null);
+				postRepository.save(sharingPost);
+			});
 
-            postRepository.deleteById(postId);
+			notificationService.deleteNotificationByOwningPost(targetPost);
 
-            if (targetPost.getPostPhoto() != null) {
-                String uploadDir = environment.getProperty("upload.post.images");
-                String photoName = getPhotoNameFromPhotoUrl(targetPost.getPostPhoto());
-                try {
-                    fileUploadUtil.deleteFile(uploadDir, photoName);
-                } catch (IOException ignored) {}
-            }
-        } else {
-            throw new InvalidOperationException();
-        }
-    }
+			postRepository.deleteById(postId);
 
-    @Override
-    public void deletePostPhoto(Long postId) {
-        User authUser = userService.getAuthenticatedUser();
-        Post targetPost = getPostById(postId);
+			if (targetPost.getPostPhoto() != null) {
+				String uploadDir = environment.getProperty("upload.post.images");
+				String photoName = getPhotoNameFromPhotoUrl(targetPost.getPostPhoto());
+				try {
+					fileUploadUtil.deleteFile(uploadDir, photoName);
+				} catch (IOException ignored) {
+				}
+			}
+		} else {
+			throw new InvalidOperationException();
+		}
+	}
 
-        if (targetPost.getAuthor().equals(authUser)) {
-            if (targetPost.getPostPhoto() != null) {
-                String uploadDir = environment.getProperty("upload.post.images");
-                String photoName = getPhotoNameFromPhotoUrl(targetPost.getPostPhoto());
-                try {
-                    fileUploadUtil.deleteFile(uploadDir, photoName);
-                } catch (IOException ignored) {}
-            }
+	@Override
+	public void deletePostPhoto(Long postId) {
+		User authUser = userService.getAuthenticatedUser();
+		Post targetPost = getPostById(postId);
 
-            targetPost.setPostPhoto(null);
-            postRepository.save(targetPost);
-        } else {
-            throw new InvalidOperationException();
-        }
-    }
+		if (targetPost.getAuthor().equals(authUser)) {
+			if (targetPost.getPostPhoto() != null) {
+				String uploadDir = environment.getProperty("upload.post.images");
+				String photoName = getPhotoNameFromPhotoUrl(targetPost.getPostPhoto());
+				try {
+					fileUploadUtil.deleteFile(uploadDir, photoName);
+				} catch (IOException ignored) {
+				}
+			}
 
-    @Override
-    public void likePost(Long postId) {
-        User authUser = userService.getAuthenticatedUser();
-        Post targetPost = getPostById(postId);
-        if (!targetPost.getLikeList().contains(authUser)) {
-            targetPost.setLikeCount(targetPost.getLikeCount() + 1);
-            targetPost.getLikeList().add(authUser);
-            postRepository.save(targetPost);
+			targetPost.setPostPhoto(null);
+			postRepository.save(targetPost);
+		} else {
+			throw new InvalidOperationException();
+		}
+	}
 
-            if (!targetPost.getAuthor().equals(authUser)) {
-                notificationService.sendNotification(
-                        targetPost.getAuthor(),
-                        authUser,
-                        targetPost,
-                        null,
-                        NotificationType.POST_LIKE.name()
-                );
-            }
-        } else {
-            throw new InvalidOperationException();
-        }
-    }
+	@Override
+	public void likePost(Long postId) {
+		User authUser = userService.getAuthenticatedUser();
+		Post targetPost = getPostById(postId);
+		if (!targetPost.getLikeList().contains(authUser)) {
+			targetPost.setLikeCount(targetPost.getLikeCount() + 1);
+			targetPost.getLikeList().add(authUser);
+			postRepository.save(targetPost);
 
-    @Override
-    public void unlikePost(Long postId) {
-        User authUser = userService.getAuthenticatedUser();
-        Post targetPost = getPostById(postId);
-        if (targetPost.getLikeList().contains(authUser)) {
-            targetPost.setLikeCount(targetPost.getLikeCount()-1);
-            targetPost.getLikeList().remove(authUser);
-            postRepository.save(targetPost);
+			if (!targetPost.getAuthor().equals(authUser)) {
+				notificationService.sendNotification(targetPost.getAuthor(), authUser, targetPost, null,
+						NotificationType.POST_LIKE.name());
+			}
+		} else {
+			throw new InvalidOperationException();
+		}
+	}
 
-            if (!targetPost.getAuthor().equals(authUser)) {
-                notificationService.removeNotification(
-                        targetPost.getAuthor(),
-                        targetPost,
-                        NotificationType.POST_LIKE.name()
-                );
-            }
-        } else {
-            throw new InvalidOperationException();
-        }
-    }
+	@Override
+	public void unlikePost(Long postId) {
+		User authUser = userService.getAuthenticatedUser();
+		Post targetPost = getPostById(postId);
+		if (targetPost.getLikeList().contains(authUser)) {
+			targetPost.setLikeCount(targetPost.getLikeCount() - 1);
+			targetPost.getLikeList().remove(authUser);
+			postRepository.save(targetPost);
 
-    @Override
-    public Comment createPostComment(Long postId, String content) {
-        if (StringUtils.isEmpty(content)) throw new EmptyCommentException();
+			if (!targetPost.getAuthor().equals(authUser)) {
+				notificationService.removeNotification(targetPost.getAuthor(), targetPost,
+						NotificationType.POST_LIKE.name());
+			}
+		} else {
+			throw new InvalidOperationException();
+		}
+	}
 
-        User authUser = userService.getAuthenticatedUser();
-        Post targetPost = getPostById(postId);
-        Comment savedComment = commentService.createNewComment(content, targetPost);
-        targetPost.setCommentCount(targetPost.getCommentCount()+1);
-        postRepository.save(targetPost);
+	@Override
+	public Comment createPostComment(Long postId, String content) {
+		if (StringUtils.isEmpty(content))
+			throw new EmptyCommentException();
 
-        if (!targetPost.getAuthor().equals(authUser)) {
-            notificationService.sendNotification(
-                    targetPost.getAuthor(),
-                    authUser,
-                    targetPost,
-                    savedComment,
-                    NotificationType.POST_COMMENT.name()
-            );
-        }
+		User authUser = userService.getAuthenticatedUser();
+		Post targetPost = getPostById(postId);
+		Comment savedComment = commentService.createNewComment(content, targetPost);
+		targetPost.setCommentCount(targetPost.getCommentCount() + 1);
+		postRepository.save(targetPost);
 
-        return savedComment;
-    }
+		if (!targetPost.getAuthor().equals(authUser)) {
+			notificationService.sendNotification(targetPost.getAuthor(), authUser, targetPost, savedComment,
+					NotificationType.POST_COMMENT.name());
+		}
 
-    @Override
-    public Comment updatePostComment(Long commentId, Long postId, String content) {
-        if (StringUtils.isEmpty(content)) throw new EmptyCommentException();
+		return savedComment;
+	}
 
-        return commentService.updateComment(commentId, content);
-    }
+	@Override
+	public Comment updatePostComment(Long commentId, Long postId, String content) {
+		if (StringUtils.isEmpty(content))
+			throw new EmptyCommentException();
 
-    @Override
-    public void deletePostComment(Long commentId, Long postId) {
-        Post targetPost = getPostById(postId);
-        commentService.deleteComment(commentId);
-        targetPost.setCommentCount(targetPost.getCommentCount()-1);
-        targetPost.setDateLastModified(new Date());
-        postRepository.save(targetPost);
-    }
+		return commentService.updateComment(commentId, content);
+	}
 
-    @Override
-    public Post createPostShare(String content, Long postId) {
-        User authUser = userService.getAuthenticatedUser();
-        Post targetPost = getPostById(postId);
-        if (!targetPost.getIsTypeShare()) {
-            Post newPostShare = new Post();
-            newPostShare.setContent(content);
-            newPostShare.setAuthor(authUser);
-            newPostShare.setLikeCount(0);
-            newPostShare.setShareCount(null);
-            newPostShare.setCommentCount(0);
-            newPostShare.setPostPhoto(null);
-            newPostShare.setIsTypeShare(true);
-            newPostShare.setSharedPost(targetPost);
-            newPostShare.setDateCreated(new Date());
-            newPostShare.setDateLastModified(new Date());
-            Post savedPostShare = postRepository.save(newPostShare);
-            targetPost.getShareList().add(savedPostShare);
-            targetPost.setShareCount(targetPost.getShareCount()+1);
-            postRepository.save(targetPost);
+	@Override
+	public void deletePostComment(Long commentId, Long postId) {
+		Post targetPost = getPostById(postId);
+		commentService.deleteComment(commentId);
+		targetPost.setCommentCount(targetPost.getCommentCount() - 1);
+		targetPost.setDateLastModified(new Date());
+		postRepository.save(targetPost);
+	}
 
-            if (!targetPost.getAuthor().equals(authUser)) {
-                notificationService.sendNotification(
-                        targetPost.getAuthor(),
-                        authUser,
-                        targetPost,
-                        null,
-                        NotificationType.POST_SHARE.name()
-                );
-            }
+	@Override
+	public Post createPostShare(String content, Long postId) {
+		User authUser = userService.getAuthenticatedUser();
+		Post targetPost = getPostById(postId);
+		if (!targetPost.getIsTypeShare()) {
+			Post newPostShare = new Post();
+			newPostShare.setContent(content);
+			newPostShare.setAuthor(authUser);
+			newPostShare.setLikeCount(0);
+			newPostShare.setShareCount(null);
+			newPostShare.setCommentCount(0);
+			newPostShare.setPostPhoto(null);
+			newPostShare.setIsTypeShare(true);
+			newPostShare.setSharedPost(targetPost);
+			newPostShare.setDateCreated(new Date());
+			newPostShare.setDateLastModified(new Date());
+			Post savedPostShare = postRepository.save(newPostShare);
+			targetPost.getShareList().add(savedPostShare);
+			targetPost.setShareCount(targetPost.getShareCount() + 1);
+			postRepository.save(targetPost);
 
-            return savedPostShare;
-        } else {
-            throw new InvalidOperationException();
-        }
-    }
+			if (!targetPost.getAuthor().equals(authUser)) {
+				notificationService.sendNotification(targetPost.getAuthor(), authUser, targetPost, null,
+						NotificationType.POST_SHARE.name());
+			}
 
-    @Override
-    public Post updatePostShare(String content, Long postShareId) {
-        User authUser = userService.getAuthenticatedUser();
-        Post targetPostShare = getPostById(postShareId);
-        if (targetPostShare.getAuthor().equals(authUser)) {
-            targetPostShare.setContent(content);
-            targetPostShare.setDateLastModified(new Date());
-            return postRepository.save(targetPostShare);
-        } else {
-            throw new InvalidOperationException();
-        }
-    }
+			return savedPostShare;
+		} else {
+			throw new InvalidOperationException();
+		}
+	}
 
-    @Override
-    public void deletePostShare(Long postShareId) {
-        User authUser = userService.getAuthenticatedUser();
-        Post targetPostShare = getPostById(postShareId);
-        if (targetPostShare.getAuthor().equals(authUser)) {
-            Post sharedPost = targetPostShare.getSharedPost();
-            sharedPost.getShareList().remove(targetPostShare);
-            sharedPost.setShareCount(sharedPost.getShareCount()-1);
-            postRepository.save(sharedPost);
-            postRepository.deleteById(postShareId);
+	@Override
+	public Post updatePostShare(String content, Long postShareId) {
+		User authUser = userService.getAuthenticatedUser();
+		Post targetPostShare = getPostById(postShareId);
+		if (targetPostShare.getAuthor().equals(authUser)) {
+			targetPostShare.setContent(content);
+			targetPostShare.setDateLastModified(new Date());
+			return postRepository.save(targetPostShare);
+		} else {
+			throw new InvalidOperationException();
+		}
+	}
 
-            notificationService.deleteNotificationByOwningPost(targetPostShare);
-        } else {
-            throw new InvalidOperationException();
-        }
-    }
+	@Override
+	public void deletePostShare(Long postShareId) {
+		User authUser = userService.getAuthenticatedUser();
+		Post targetPostShare = getPostById(postShareId);
+		if (targetPostShare.getAuthor().equals(authUser)) {
+			Post sharedPost = targetPostShare.getSharedPost();
+			sharedPost.getShareList().remove(targetPostShare);
+			sharedPost.setShareCount(sharedPost.getShareCount() - 1);
+			postRepository.save(sharedPost);
+			postRepository.deleteById(postShareId);
 
-    private String getPhotoNameFromPhotoUrl(String photoUrl) {
-        if (photoUrl != null) {
-            String stringToOmit = environment.getProperty("app.root.backend") + File.separator
-                    + environment.getProperty("upload.post.images") + File.separator;
-            return photoUrl.substring(stringToOmit.length());
-        } else {
-            return null;
-        }
-    }
+			notificationService.deleteNotificationByOwningPost(targetPostShare);
+		} else {
+			throw new InvalidOperationException();
+		}
+	}
 
-    private PostResponse postToPostResponse(Post post) {
-        User authUser = userService.getAuthenticatedUser();
-        return PostResponse.builder()
-                .post(post)
-                .likedByAuthUser(post.getLikeList().contains(authUser))
-                .build();
-    }
+	private String getPhotoNameFromPhotoUrl(String photoUrl) {
+		if (photoUrl != null) {
+			String stringToOmit = environment.getProperty("app.root.backend") + File.separator
+					+ environment.getProperty("upload.post.images") + File.separator;
+			return photoUrl.substring(stringToOmit.length());
+		} else {
+			return null;
+		}
+	}
+
+	private PostResponse postToPostResponse(Post post) {
+		User authUser = userService.getAuthenticatedUser();
+		return PostResponse.builder().post(post).likedByAuthUser(post.getLikeList().contains(authUser)).build();
+	}
 }
